--- a/configs/server/backup_tool_script.in
+++ b/configs/server/backup_tool_script.in
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 PROGRAM="backup_tool_script"
-PROGRAM_VERSION=0.4.2
-PROGRAM_BUILD=2018070301
+PROGRAM_VERSION=0.4.4
+PROGRAM_BUILD=2018110501
 AUTHOR="(C) 2017-2018 by Orsiris de Jong"
 CONTACT="http://www.netpower.fr - ozy@netpower.fr"
 IS_STABLE=yes
@@ -39,10 +39,10 @@ POSTPONE_RETRY=2
 POSTPONE_TIME=3600
 
 ## Backup executable (can be set to /usr/sbin/@name@, /usr/local/sbin/@name@, or autodetect via $(type -p @name@))
-BACKUP_EXECUTABLE=@sbindir@/@name@
+BACKUP_EXECUTABLE=@sbindir@/@name@ # PROD = @sbindir@/@name@
 
 ## @name@ service type (can be "initv" or "systemd")
-SERVICE_TYPE=initv
+SERVICE_TYPE=initv # PROD = initv
 
 ## How many simultaneous verify operations should be launched (please check I/O and CPU usage before increasing this)
 PARELLEL_VERIFY_CONCURRENCY=2
@@ -113,7 +113,34 @@ LOCAL_HOST=$(hostname)
 
 SCRIPT_PID=$$
 
-TSTAMP=$(date '+%Y%m%dT%H%M%S.%N')
+# Get a random number on Windows BusyBox alike, also works on most Unixes that have dd, if dd is not found, then return $RANDOM
+function PoorMansRandomGenerator {
+	local digits="${1}" # The number of digits to generate
+	local number
+	local isFirst=true
+
+	if type dd >/dev/null 2>&1; then
+
+		# Some read bytes can't be used, se we read twice the number of required bytes
+		dd if=/dev/urandom bs=$digits count=2 2> /dev/null | while read -r -n1 char; do
+			if [ $isFirst == false ] || [ $(printf "%d" "'$char") != "0" ]; then
+				number=$number$(printf "%d" "'$char")
+				isFirst=false
+			fi
+			if [ ${#number} -ge $digits ]; then
+				echo ${number:0:$digits}
+				break;
+			fi
+		done
+	elif [ "$RANDOM" -ne 0 ]; then
+		 echo $RANDOM
+	else
+		Logger "Cannot generate random number." "ERROR"
+	fi
+}
+
+# Initial TSTMAP value before function declaration
+TSTAMP=$(date '+%Y%m%dT%H%M%S').$(PoorMansRandomGenerator 5)
 
 ALERT_LOG_FILE="$RUN_DIR/$PROGRAM.$SCRIPT_PID.$TSTAMP.last.log"
 
@@ -140,7 +167,7 @@ fi
 #### DEBUG SUBSET ####
 ## allow function call checks                   #__WITH_PARANOIA_DEBUG
 if [ "$_PARANOIA_DEBUG" == "yes" ];then         #__WITH_PARANOIA_DEBUG
-	_DEBUG=yes                              #__WITH_PARANOIA_DEBUG
+	_DEBUG=yes                              	#__WITH_PARANOIA_DEBUG
 fi                                              #__WITH_PARANOIA_DEBUG
 
 ## allow debugging from command line with _DEBUG=yes
@@ -620,23 +647,50 @@ function CheckRFC822 {
 	fi
 }
 
+# Function is busybox compatible since busybox ash does not understand direct regex, we use expr
 function IsInteger {
 	local value="${1}"
-	if [[ $value =~ ^[0-9]+$ ]]; then
-		echo 1
+
+	if type expr > /dev/null 2>&1; then
+		expr "$value" : '^[0-9]\{1,\}$' > /dev/null 2>&1
+		if [ $? -eq 0 ]; then
+			echo 1
+		else
+			echo 0
+		fi
 	else
-		echo 0
+		if [[ $value =~ ^[0-9]+$ ]]; then
+			echo 1
+		else
+			echo 0
+		fi
+	fi
+}
+
+# Usage [ $(IsNumeric $var) -eq 1 ]
+function IsNumeric {
+	local value="${1}"
+
+	if type expr > /dev/null 2>&1; then
+		expr "$value" : '^[-+]\{0,1\}[0-9]*\.\{0,1\}[0-9]\{1,\}$' > /dev/null 2>&1
+		if [ $? -eq 0 ]; then
+			echo 1
+		else
+			echo 0
+		fi
+	else
+		if [[ $value =~ ^[-+]?[0-9]+([.][0-9]+)?$ ]]; then
+			echo 1
+		else
+			echo 0
+		fi
 	fi
 }
 
 function IsNumericExpand {
 	eval "local value=\"${1}\"" # Needed eval so variable variables can be processed
 
-	if [[ $value =~ ^-?[0-9]+([.][0-9]+)?$ ]]; then
-		echo 1
-	else
-		echo 0
-	fi
+	echo $(IsNumeric "$value")
 }
 
 ## Modified version of http://stackoverflow.com/a/8574392
@@ -744,9 +798,6 @@ function ExecTasks {
 		done
 	fi
 
-	# Change '-' to '_' in task id
-	id="${id/-/_}"
-
 	# Expand validExitCodes into array
 	IFS=';' read -r -a validExitCodes <<< "$validExitCodes"
 
@@ -783,17 +834,11 @@ function ExecTasks {
 	local newPidsArray              # New array of currently running pids for next iteration
 	local pidsTimeArray             # Array containing execution begin time of pids
 	local executeCommand            # Boolean to check if currentCommand can be executed given a condition
-
 	local hasPids=false             # Are any valable pids given to function ?              #__WITH_PARANOIA_DEBUG
-
 	local functionMode
-
-	if [ $counting == true ]; then
-		local softAlert=false # Does a soft alert need to be triggered, if yes, send an alert once
-	else
-		local softAlert=false
-	fi
-
+	local softAlert=false			# Does a soft alert need to be triggered, if yes, send an alert once
+	local failedPidsList			# List containing failed pids with exit code separated by semicolons (eg : 2355:1;4534:2;2354:3)
+	
 	# Initialise global variable
 	eval "WAIT_FOR_TASK_COMPLETION_$id=\"\""
 	eval "HARD_MAX_EXEC_TIME_REACHED_$id=false"
@@ -960,10 +1005,10 @@ function ExecTasks {
 						fi
 						errorcount=$((errorcount+1))
 						# Welcome to variable variable bash hell
-						if [ "$(eval echo \"\$WAIT_FOR_TASK_COMPLETION_$id\")" == "" ]; then
-							eval "WAIT_FOR_TASK_COMPLETION_$id=\"$pid:$retval\""
+						if [ "$failedPidsList" == "" ]; then
+							failedPidsList="$pid:$retval"
 						else
-							eval "WAIT_FOR_TASK_COMPLETION_$id=\";$pid:$retval\""
+							failedPidsList="$failedPidsList;$pid:$retval"
 						fi
 					else
 						Logger "${FUNCNAME[0]} called by [$id] finished monitoring pid [$pid] with exitcode [$retval]." "DEBUG"
@@ -1125,6 +1170,8 @@ function ExecTasks {
 	# Return exit code if only one process was monitored, else return number of errors
 	# As we cannot return multiple values, a global variable WAIT_FOR_TASK_COMPLETION contains all pids with their return value
 
+	eval "WAIT_FOR_TASK_COMPLETION_$id=\"$failedPidsList\""
+	
 	if [ $mainItemCount -eq 1 ]; then
 		return $retval
 	else
@@ -1292,6 +1339,7 @@ function ListClients {
 		find "$backupDir" -mindepth 3 -maxdepth 3 -type f -name "backup_stats" | grep -e '.*' > /dev/null
 		if [ $? != 0 ]; then
 			Logger "The directory [$backupDir] does not seem to be a @name@ folder. Please check the path. Additionnaly, protocol 2 directores need to specify the dedup group directory and the client subfolder." "ERROR"
+			Logger "This message may also show if the current user running this script does not have sufficient privileges on the @name@ folder." "ERROR"
 		fi
 	fi
 
@@ -1437,8 +1485,6 @@ function VerifyBackups {
 
 	local safeExitCodes="0;2;3" # 0: success, 2: warnings, 3: timer conditions not met
 
-	Logger "Running backup verification, concurrency set to $PARELLEL_VERIFY_CONCURRENCY." "NOTICE"
-
 	if [ -f "$configFile" ]; then
 		configString="-c \"$configFile\""
 	fi
@@ -1467,6 +1513,7 @@ function VerifyBackups {
 	InterleaveFiles "${interleaveFileArgs[@]}" > "$RUN_DIR/$PROGRAM.${FUNCNAME[0]}-3.$SCRIPT_PID.$TSTAMP"
 	InterleaveFiles "${interleaveConditionsFileArgs[@]}" > "$RUN_DIR/$PROGRAM.${FUNCNAME[0]}-3.1.$SCRIPT_PID.$TSTAMP"
 
+	Logger "Now running backup verifications, concurrency set to $PARELLEL_VERIFY_CONCURRENCY." "NOTICE"
 	Logger "Executing parallel commands\n$(cat $RUN_DIR/$PROGRAM.${FUNCNAME[0]}-3.$SCRIPT_PID.$TSTAMP)" "DEBUG"
 	ExecTasks "$RUN_DIR/$PROGRAM.${FUNCNAME[0]}-3.$SCRIPT_PID.$TSTAMP" "${FUNCNAME[0]}" true $SOFT_MAX_EXEC_TIME_PER_VERIFY $HARD_MAX_EXEC_TIME_PER_VERIFY $SOFT_MAX_EXEC_TIME $HARD_MAX_EXEC_TIME true $SLEEP_TIME $KEEP_LOGGING true false false $PARELLEL_VERIFY_CONCURRENCY "$RUN_DIR/$PROGRAM.${FUNCNAME[0]}-3.1.$SCRIPT_PID.$TSTAMP" $POSTPONE_RETRY $POSTPONE_TIME "$safeExitCodes"
 	exitCode=$?
@@ -2045,6 +2092,11 @@ if [ "$VERIFY_BACKUPS" != "" ]; then
 		exit 1
 	fi
 fi
+
+# v0.4.4
+# - More explicit log messages
+# - Fix for missing date %N in BSD / MacOS
+# - Ported some minor fixes from osync project
 
 # v0.4.2
 # - Added Hakong's backup calendar display (using --calendar)
