--- a/configs/client/burp.conf.in
+++ b/configs/client/burp.conf.in
@@ -31,8 +31,11 @@ progress_counter = 1
 # randomise = 1200
 
 # Set server_can_restore to 0 if you do not want the server to be able to
-# initiate a restore.
+# initiate a restore (setting it to 1 also requires 'restoreprefix').
 server_can_restore = 0
+# This option is prefixed to the path of all restores, and is overridden by
+# '-d' on the command line.
+# restoreprefix = /my/restore/directory
 
 # Set server_can_override_includes to 0 if you do not want the server to be
 # able to override the local include/exclude list. The default is 1.
