--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -182,20 +182,17 @@ Long list the /home/graham directory of backup 1. These '\-d' versions of the li
 \fB@name@ \-C altclient \-a L\fR
 Long list the top level directory of backup 1 of client 'altclient'.
 .TP
-\fB@name@ \-a r\fR
-Restores all the files in the most recent backup to their original location.
+\fB@name@ \-a r \-d /tmp/restoredir\fR
+Restores all the files in the most recent backup into the directory /tmp/restoredir.
 .TP
-\fB@name@ \-a r \-b 1 \-r myregex\fR
-Restores all the files in backup number 1 that match the regular expression 'myregex' back to their original location.
+\fB@name@ \-a r \-b 1 \-d /tmp/restoredir \-r myregex\fR
+Restores all the files in backup number 1 into the directory /tmp/restoredir, if they match the regular expression 'myregex'.
 .TP
-\fB@name@ \-a r \-b 1 \-r myregex \-d /tmp/restoredir\fR
-Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir.
+\fB@name@ \-a r \-b 1 \-d /tmp/restoredir \-r myregex \-s 2\fR
+Restores all the files in backup number 1 into the directory /tmp/restore, if they match the regular expression 'myregex', and strip 2 leading path components.
 .TP
-\fB@name@ \-a r \-b 1 \-r myregex \-d /tmp/restoredir \-s 2\fR
-Restores all the files in backup number 1 that match the regular expression 'myregex' into the directory /tmp/restoredir and strip 2 leading path components.
-.TP
-\fB@name@ \-C altclient \-a r \-b 1 \-r myregex \-d /tmp/restoredir\fR
-Restores all the files in backup number 1 of client 'altclient' that match the regular expression 'myregex' into the directory /tmp/restoredir.
+\fB@name@ \-C altclient \-a r \-b 1 \-d /tmp/restoredir \-r myregex\fR
+Restores all the files in backup number 1 of client 'altclient' into the directory /tmp/restoredir, if that match the regular expression 'myregex'.
 .TP
 \fB@name@ \-a v\fR
 Verifies the most recent backup.
@@ -600,11 +597,14 @@ Must match the common name in the SSL certificate that the server gives when it 
 \fBssl_ciphers=[cipher list]\fR
 Allowed SSL ciphers. See openssl ciphers for details.
 .TP
-\fBserver_can_restore=[0|1]\fR
-To prevent the server from initiating restores, set this to 0. The default is 1.
-.TP
 \fBserver_can_override_includes=[0|1]\fR
 To prevent the server from being able to override your local include/exclude list, set this to 0. The default is 1.
+.TP
+\fBserver_can_restore=[0|1]\fR
+To prevent the server from initiating restores, set this to 0. The default is 1. You will also need to give a location for the files to be restored to with the 'restoreprefix' option.
+.TP
+\fBrestoreprefix=[path]\fR
+When restoring, this path will be prefixed to the restore path. The '-d' command line option overrides this setting. This setting is required if you are using server initiated restores.
 .TP
 \fBencryption_password=[password]\fR
 Set this to enable client side file Blowfish encryption. If you do not want encryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). @human_name@ will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
@@ -845,7 +845,7 @@ You can queue a backup on the server, to be performed when the client next makes
 
 .SH Server initiated restores
 .TP
-You can queue a restore on the server, to be performed when the client next makes contact. To do this, you put a file called 'restore' into the top level of the client storage directory. The client can deny server initiated restores by setting "server_can_restore=0" in its @name@.conf. Valid fields to include in the restore file are:
+You can queue a restore on the server, to be performed when the client next makes contact. To do this, you put a file called 'restore' into the top level of the client storage directory. The client can deny server initiated restores by setting "server_can_restore=0" in its @name@.conf. The client also needs to specify 'restoreprefix' in its configuration as a destination for the restored files. Valid fields to include in the restore file are:
 .TP
 \fBorig_client=[client]\fR
 The original client to restore from. Equivalent to '\-C' when initiating a restore from a client. Do not include this line when restoring to the original client. See also the 'restore_client' server option.
@@ -860,7 +860,7 @@ Whether to overwrite existing files. Equivalent to '\-f' when initiating a resto
 Number of leading path components to strip. Equivalent to '\-s' when initiating a restore from the client.
 .TP
 \fBrestoreprefix=[path]\fR
-Prefix to the restore path. Equivalent to '\-d' when initiating a restore from the client.
+Appended to the client-side 'restoreprefix' setting, and then prefixed to the restore path.
 .TP
 \fBstripfrompath=[string]\fR
 Strip matching string from restore paths (before prefix is prepended).
