Olivier Cherrier's NetBSD/OpenBSD fix for burp_ca.
Change-Id: If563369f2f8a9b64f41def4c2b30bd8f66764468

--- a/configs/certs/CA/burp_ca.in
+++ b/configs/certs/CA/burp_ca.in
@@ -53,12 +53,14 @@ while ! lock; do
 	fi
 done
 
-# Solaris and AIX don't support 'hostname -f' and, in fact,
-# set the hostname to '-f' with that call.
+# Solaris, AIX, NetBSD and OpenBSD don't support 'hostname -f' and,
+# in fact, set the hostname to '-f' with that call.
 name=
 case "$(uname -s)" in
 	SunOS) name="$(check-hostname | cut -d' ' -f7)" ;;
 	AIX) name="$(host "$(hostname)" | awk '{ print $1}')" ;;
+	NetBSD) name="$(hostname)" ;;
+	OpenBSD) name="$(uname -n)" ;;
 	*) name="$(hostname -f)" ;;
 esac
 # Try NetBSD style.
