--- a/configs/server/backup_tool_script.in
+++ b/configs/server/backup_tool_script.in
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 PROGRAM="backup_tool_script"
-PROGRAM_VERSION=0.4.6
-PROGRAM_BUILD=2019012801
+PROGRAM_VERSION=0.4.6a
+PROGRAM_BUILD=2019020201
 AUTHOR="(C) 2017-2019 by Orsiris de Jong"
 CONTACT="http://www.netpower.fr - ozy@netpower.fr"
 IS_STABLE=true
@@ -808,7 +808,7 @@ function ExecTasks {
 	local currentCommand            # Variable containing currently processed command
 	local currentCommandCondition   # Variable containing currently processed conditional command
 	local commandsArrayPid=()       # Array containing commands indexed py pids
-	local commandsArrayOutput()     # Array containing command results indexed by pids
+	local commandsArrayOutput=()    # Array containing command results indexed by pids
 	local postponedRetryCount=0     # Number of current postponed commands retries
 	local postponedItemCount=0      # Number of commands that have been postponed (keep at least one in order to check once)
 	local postponedCounter=0
