Correct 'listen' section in the manpage. There is no longer a default or compile-time options.
Change-Id: I58cddb59a34382e6fa5ac27a1b18851a2410d3f4

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -225,7 +225,7 @@ Read additional configuration files.
 Required to run in server mode.
 .TP
 \fBlisten=[address]:[port]\fR
-Defines the main TCP address and port that the server listens on. The default is either '::' or '0.0.0.0', dependent upon compile time options. Specify multiple 'listen' entries on separate lines in order to listen on multiple addresses and ports. Each pair can be configured with its own 'max_children' value.
+Defines the main TCP address and port that the server listens on. Specify multiple 'listen' entries on separate lines in order to listen on multiple addresses and ports. Each pair can be configured with its own 'max_children' value.
 .TP
 \fBlisten_status=[address]:[port]\fR
 Defines the main TCP address and port that the server listens on for status requests. Specify multiple 'listen_status' entries on separate lines in order to listen on multiple addresses and ports. Each pair can be configured with its own 'max_status_children' value. Comment out to have no status server.
