Remove LT_INIT, it seems to cause more problems than it solves.
Change-Id: Iccf05b57b4126e45b3f7e688bef659dc3c61ae7e

--- a/configure.ac
+++ b/configure.ac
@@ -44,7 +44,7 @@ dnl --------------------------------------------------
 dnl Libtool config
 dnl --------------------------------------------------
 
-LT_INIT([disable-static])
+#LT_INIT([disable-static])
 
 dnl --------------------------------------------------
 dnl OS determination
